--- a/index.html
+++ b/index.html
@@ -211,10 +211,10 @@
                         <i class="icon-browser"></i>
                     </div>
                     <div class="service-content">
-                        <h4>Bachalor's of Engineering</h4>
+                        <h4>Bachelor's of Engineering</h4>
                         <h5>MARKS: 9.41 CGPA</h5>
                         <h6>(2017-2021)</h6>
-                        <p>I have done my Bachalor's of Engineering in Computer Engineering from Silver Oak University which is affiliated to Gujarat Technological University.</p>
+                        <p>I have done my Bachelor's of Engineering in Computer Engineering from Silver Oak University which is affiliated to Gujarat Technological University.</p>
                         
                     </div>
                 </div>
