--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 <div class="about-right">
                     <h2>computer science enginer</h2>
                     <p>I am <span>Dhruvkumar Parmar</span>. I am a tech enthusiastic , creative, and fun-loving person. I always like to create something on my own which is helpful for others.</p>
-                    <p>I have vast experience in HTML5, CSS3, Cloud Computing (GCP, AWS), UI/UX ( Adobe XD, Adobe Illustrator), Core Java, C/C++, Fultter and on.</p>
+                    <p>I have vast experience in HTML5, CSS3, Cloud Computing (GCP, AWS), UI/UX ( Adobe XD, Adobe Illustrator), Core Java, C/C++, Flutter and on.</p>
                     <p>I can take initiative and work as a good team leader, balance multitasking, adaptable and flexible with new environment and people. </p>
                     <div class="row">
                         <div class="col-sm-6">
