--- a/index.html
+++ b/index.html
@@ -732,7 +732,7 @@
 
                         <div class="row">
                             <div class="col-md-8 col-xs-8">
-                                <h2>SOS System in vehicals</h2> 
+                                <h2>SOS System in vehicles</h2> 
                                 <h3>(2017 - 2018)</h3> 
                             </div>
                             <div class="col-md-4 col-xs-4">
