--- a/index.html
+++ b/index.html
@@ -855,7 +855,7 @@
                     <div class="right-contact-text">
                         <i class="fa fa-globe"></i>
                         <h2>Website Address</h2>
-                        <p>www.dhruvparmar.ml</p> 
+                        <p>dhruvkumarparmar.github.io</p> 
                     </div>
                 </div>
             </div>
