--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
                         </div>
                         <div class="col-sm-6">
                             <ul class="about-list">
-                                <li> <span class="title">Phone</span> <span class="value">+91 9687022033</span> </li>
-                                <li> <span class="title">Address</span> <span class="value">B-31, Arti Society, Payal Nagar Road, Naroda, Ahmedabad, Gujarat, India-382330 </span> </li>
+                                <li> <span class="title">Phone</span> <span class="value">+1 4389219769</span> </li>
+                                <li> <span class="title">Address</span> <span class="value">Planet Earth </span> </li>
                                 <li> <span class="title">Hobby</span> <span class="value">Cricket, Swiming , Gaming, Listen to Bollywood and Hollywood Music</span> </li>
                             </ul>
                         </div>
@@ -844,13 +844,12 @@
                     <div class="right-contact-text">
                         <i class="fa fa-map-marker"></i>
                         <h2>Address / Street</h2>
-                        <p>B-31 Arti Society, Payal Nagar Road, Naroda,
-                        Ahmedabad, Gujarat, INDIA</p> 
+                        <p>Planet Earth</p> 
                     </div>
                     <div class="right-contact-text">
                         <i class="fa fa-phone"></i>
                         <h2>Contact Number</h2>
-                        <p>+91 9687022033</p> 
+                        <p>+1 4389219769</p> 
                     </div>
                     <div class="right-contact-text">
                         <i class="fa fa-globe"></i>
