--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     
-    <title>Dhruv Parmar</title>
+    <title>Dhruvkumar </title>
 
     
     <link rel = "icon" href ="images/favicon1.png" type = "image/x-icon">
