--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     
-    <title>Dhruvkumar </title>
+    <title>Dhruv Parmar</title>
 
     
     <link rel = "icon" href ="images/favicon1.png" type = "image/x-icon">
@@ -109,7 +109,7 @@
                                     <img src="images/home/1.png" alt=""> 
                                 </div>
 
-                                <h3> I'm Dhruv Parmar </h3>
+                                <h3> I'm Dhruvkumar</h3>
 
                                 <h1 class="ah-headline">
 
