--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                                     <img src="images/home/1.png" alt=""> 
                                 </div>
 
-                                <h3> I'm Dhruvkumar</h3>
+                                <h3> I'm Dhruv </h3>
 
                                 <h1 class="ah-headline">
 
